--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,10 +71,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.7'
 
-    // Piccasso Image Lib
+    // Picasso Image Lib
     implementation 'com.squareup.picasso:picasso:2.8'
 
-    // Dagger DI
+    // Added Dagger DI - [Remove Hilt dependency Injection]
     implementation 'com.google.dagger:dagger:2.42'
     kapt 'com.google.dagger:dagger-compiler:2.42'
+
+    // Paging Library
+    implementation 'androidx.paging:paging-runtime:2.1.2'
 }
