--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,7 @@ dependencies {
 
     // Paging Library
     implementation 'androidx.paging:paging-runtime:2.1.2'
+
+    // 2 pane layout
+    implementation("androidx.slidingpanelayout:slidingpanelayout:1.2.0")
 }
